--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -80,8 +80,6 @@ body {
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.4);
     background-color: #030512;
     opacity: 1;
     // Moving background slide
@@ -101,10 +99,8 @@ body {
 }
 
 #login-menu-modal {
-    //background-color: lightgreen;
-    margin: auto;
-    padding: 20px;
-    //border: 1px solid #888;
+    margin: 0 auto auto;
+    padding: 5px 20px 20px;
     width: 60%;
     height: 75%;
     @include angled-corners;
@@ -118,6 +114,38 @@ body {
         rgba(16, 112, 160, 0.7) 100%
     );
     color: white;
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    justify-content: space-evenly;
+    text-align: center;
+}
+
+#login-menu-id-wrapper {
+    width: 100%;
+}
+
+#login-menu-battle-id {
+    width: 100%;
+    height: min-content;
+    text-align: center;
+}
+
+#login-menu-input-wrapper {
+    height: 1.3em;
+}
+
+#receiver-id-input {
+    height: 100%;
+}
+
+#login-monster-choice {
+    height: 100%;
+}
+
+#login-status {
+    font-size: 1.4em;
+    @include animate-flicker;
 }
 
 #login-menu-submit {
