--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -93,15 +93,18 @@ body {
     @include header-banner;
     margin: 15px 0 0;
     color: white;
-    font-size: 2em;
+    font-size: 1em;
     height: min-content;
     text-align: center;
+    @media screen and (min-width: $tablet-min-width) {
+        font-size: 2em;
+    }
 }
 
 #login-menu-modal {
     margin: 0 auto auto;
     padding: 5px 20px 20px;
-    width: 60%;
+    width: 88%;
     height: 75%;
     @include angled-corners;
     background: linear-gradient(
@@ -119,6 +122,9 @@ body {
     align-items: center;
     justify-content: space-evenly;
     text-align: center;
+    @media screen and (min-width: $desktop-min-width) {
+        width: 60%;
+    }
 }
 
 #login-menu-id-wrapper {
@@ -137,6 +143,7 @@ body {
 
 #receiver-id-input {
     height: 100%;
+    margin-bottom: 4px;
 }
 
 #login-monster-choice {
@@ -149,12 +156,15 @@ body {
 }
 
 #login-menu-submit {
-    width: 33%;
+    width: 55%;
     border: none;
     @include grey-gradient-button;
     @include angled-corners;
     height: 15%;
     color: black;
+    @media screen and (min-width: $desktop-min-width) {
+        width: 33%;
+    }
 }
 
 /*
@@ -312,6 +322,36 @@ body {
 
     @media screen and (min-width: $tablet-min-width) {
         width: 275px;
+    }
+}
+
+.battle-health-bar-beam {
+    @include grey-gradient-button;
+    @include angled-corners;
+    margin: 10px 0;
+    padding: 10px;
+    width: min-content;
+    @media screen and (min-width: $tablet-min-width) {
+        margin: 20px 0;
+        padding: 20px;
+    }
+}
+
+#battle-health-bar-beam-opponent {
+    margin-left: 20px;
+    @media screen and (min-width: $tablet-min-width) {
+        margin-left: 60px;
+    }
+}
+
+#battle-health-bar-beam-player {
+    float: right;
+    margin-right: 20px;
+    @media screen and (min-width: $tablet-min-width) {
+        margin-right: 60px;
+    }
+    &:before {
+        background: black;
     }
 }
 
