--- a/styles/styles.css
+++ b/styles/styles.css
@@ -185,7 +185,7 @@ body {
       -ms-flex-flow: row wrap;
           flex-flow: row wrap;
   position: fixed;
-  z-index: 1;
+  z-index: 10;
   left: 0;
   top: 0;
   width: 100%;
@@ -526,7 +526,7 @@ body {
 @media screen and (min-width: 700px) {
   .battle-health-bar-beam {
     margin: 20px 0;
-    padding: 20px;
+    padding: 10px 20px;
   }
 }
 
@@ -593,8 +593,35 @@ body {
   height: 100%;
 }
 
+.battle-monster-wrapper::after {
+  content: "";
+  -webkit-clip-path: ellipse(50% 10% at 50% 90%);
+  clip-path: ellipse(50% 10% at 50% 90%);
+  background: black;
+  position: absolute;
+  width: 98px;
+  height: 84px;
+  z-index: 1;
+  mix-blend-mode: soft-light;
+}
+
+@media screen and (min-width: 700px) {
+  .battle-monster-wrapper::after {
+    width: 220px;
+    height: 134px;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .battle-monster-wrapper::after {
+    width: 270px;
+    height: 150px;
+  }
+}
+
 .battle-monster-sprite {
   width: 125px;
+  z-index: 2;
 }
 
 @media screen and (min-width: 700px) {
