Added animations upon taking damage.

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -177,3 +177,30 @@ $fade-speed: 3.3s;
     -o-animation: flickerAnimation $fade-speed infinite;
     animation: flickerAnimation $fade-speed infinite;
 }
+
+// Monster hurt animation
+// Credit to Sarah Drasner at https://codepen.io/sdras/pen/aOgMON
+@mixin monster-shake {
+    animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+    transform: translate3d(0, 0, 0);
+}
+
+@keyframes shake {
+    10%,
+    90% {
+        transform: translate3d(-1px, 0, 0);
+    }
+    20%,
+    80% {
+        transform: translate3d(2px, 0, 0);
+    }
+    30%,
+    50%,
+    70% {
+        transform: translate3d(-4px, 0, 0);
+    }
+    40%,
+    60% {
+        transform: translate3d(4px, 0, 0);
+    }
+}
