--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -414,6 +414,10 @@ body {
     }
 }
 
+.battle-monster-hurt {
+    @include monster-shake;
+}
+
 #pokeball-turn-indicator {
     width: 50px;
     height: 50px;
