--- a/styles/styles.css
+++ b/styles/styles.css
@@ -145,6 +145,72 @@
   }
 }
 
+@-webkit-keyframes debuff-flash {
+  0% {
+    -webkit-filter: contrast(100%) brightness(100%) saturate(100%) hue-rotate(0deg);
+    filter: contrast(100%) brightness(100%) saturate(100%) hue-rotate(0deg);
+  }
+  50% {
+    -webkit-filter: contrast(50%) brightness(60%) saturate(450%) hue-rotate(30deg);
+    filter: contrast(50%) brightness(60%) saturate(450%) hue-rotate(30deg);
+  }
+  100% {
+    -webkit-filter: contrast(100%) brightness(100%) saturate(100%) hue-rotate(0deg);
+    filter: contrast(100%) brightness(100%) saturate(100%) hue-rotate(0deg);
+  }
+}
+
+@keyframes debuff-flash {
+  0% {
+    -webkit-filter: contrast(100%) brightness(100%) saturate(100%) hue-rotate(0deg);
+    filter: contrast(100%) brightness(100%) saturate(100%) hue-rotate(0deg);
+  }
+  50% {
+    -webkit-filter: contrast(50%) brightness(60%) saturate(450%) hue-rotate(30deg);
+    filter: contrast(50%) brightness(60%) saturate(450%) hue-rotate(30deg);
+  }
+  100% {
+    -webkit-filter: contrast(100%) brightness(100%) saturate(100%) hue-rotate(0deg);
+    filter: contrast(100%) brightness(100%) saturate(100%) hue-rotate(0deg);
+  }
+}
+
+@-webkit-keyframes color-flash {
+  0% {
+    -webkit-filter: saturate(100%);
+    /* Safari */
+    filter: saturate(100%);
+  }
+  50% {
+    -webkit-filter: saturate(350%);
+    /* Safari */
+    filter: saturate(350%);
+  }
+  100% {
+    -webkit-filter: saturate(100%);
+    /* Safari */
+    filter: saturate(100%);
+  }
+}
+
+@keyframes color-flash {
+  0% {
+    -webkit-filter: saturate(100%);
+    /* Safari */
+    filter: saturate(100%);
+  }
+  50% {
+    -webkit-filter: saturate(350%);
+    /* Safari */
+    filter: saturate(350%);
+  }
+  100% {
+    -webkit-filter: saturate(100%);
+    /* Safari */
+    filter: saturate(100%);
+  }
+}
+
 html {
   height: 100%;
 }
@@ -689,6 +755,20 @@ body {
           animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
   -webkit-transform: translate3d(0, 0, 0);
           transform: translate3d(0, 0, 0);
+}
+
+.battle-monster-debuff {
+  -webkit-animation: debuff-flash 1.3s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+          animation: debuff-flash 1.3s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+  -webkit-filter: contrast(100%) brightness(100%) saturate(100%) hue-rotate(0deg);
+  filter: contrast(100%) brightness(100%) saturate(100%) hue-rotate(0deg);
+}
+
+.battle-monster-heal {
+  -webkit-animation: color-flash 1.3s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+          animation: color-flash 1.3s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+  -webkit-filter: saturate(100%);
+  filter: saturate(100%);
 }
 
 #pokeball-turn-indicator {
