--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -418,6 +418,14 @@ body {
     @include monster-shake;
 }
 
+.battle-monster-debuff {
+    @include monster-debuff;
+}
+
+.battle-monster-heal {
+    @include monster-heal;
+}
+
 #pokeball-turn-indicator {
     width: 50px;
     height: 50px;
