--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -178,6 +178,11 @@ $fade-speed: 3.3s;
     animation: flickerAnimation $fade-speed infinite;
 }
 
+// Pokeball turn indicator animation
+@mixin ball-turn {
+    transition: transform 0.8s cubic-bezier(0.36, 0.07, 0.19, 0.97);
+}
+
 // Monster sprites visceral feedback animations
 // Monster hurt animation
 // Credit to Sarah Drasner at https://codepen.io/sdras/pen/aOgMON
