--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -435,6 +435,8 @@ body {
         width: 75px;
         height: 75px;
     }
+    transform: rotate(0deg);
+    @include ball-turn;
 }
 
 // Buttons
